
- #8959, #8960, #8968, #9023: minor refactorings in the typing of patterns:
  + refactor the {let,pat}_bound_idents* functions
  + minor bugfix in type_pat
  + refactor the generic pattern-traversal functions
    in Typecore and Typedtree
  + restrict the use of Need_backtrack
  (Gabriel Scherer and Florian Angeletti,
   review by Thomas Refis and Gabriel Scherer)

- #8975: "ocamltests" files are no longer required or used by
  "ocamltest". Instead, any text file in the testsuite directory containing a
  valid "TEST" block will be automatically included in the testsuite.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Sébastien Hinderer)

- #8992: share argument implementations between executables
  (Florian Angeletti, review by Gabriel Scherer)

- #9015: fix fatal error in pprint_ast (#8789)
  (Damien Doligez, review by ...)

### Code generation and optimizations:

- #8990: amd64: Emit 32bit registers for Iconst_int when we can
  (Xavier Clerc, Tom Kelly and Mark Shinwell, review by Xavier Leroy)

- #8672: Optimise Switch code generation on booleans.
  (Stephen Dolan, review by Pierre Chambart)

- #2322: Add pseudo-instruction `Ladjust_trap_depth` to replace
  dummy Lpushtrap generated in linearize
  (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)

- #8707: Simplif: more regular treatment of Tupled and Curried functions
  (Gabriel Scherer, review by Leo White and Alain Frisch)

- #8526: Add compile-time option -function-sections in ocamlopt to emit
  each function in a separate named text section on supported targets.
  (Greta Yorsh, review by Pierre Chambart)

- #2321: Eliminate dead ICatch handlers
  (Greta Yorsh, review by Pierre Chambart and Vincent Laviron)

- #8919: lift mutable lets along with immutable ones
  (Leo White, review by Pierre Chambart)

- #8806: Add an [@@immediate64] attribute for types that are known to
  be immediate only on 64 bit platforms
  (Jérémie Dimino, review by Vladimir Keleshev)
