@@ -927,28 +927,6 @@ let unify_head_only loc env ty constr =
 
 (* Typing of patterns *)
 
-(* Remember current state for backtracking.
-   No variable information, as we only backtrack on
-   patterns without variables (cf. assert statements). *)
-type state =
- { snapshot: Btype.snapshot;
-   levels: Ctype.levels;
-   env: Env.t; }
-let save_state env =
-  { snapshot = Btype.snapshot ();
-    levels = Ctype.save_levels ();
-    env = !env; }
-let set_state s env =
-  Btype.backtrack s.snapshot;
-  Ctype.set_levels s.levels;
-  env := s.env
-
-(* type_pat does not generate local constraints inside or patterns *)
-type type_pat_mode =
-  | Normal
-  | Inside_or      (* inside a non-split or-pattern *)
-  | Split_or       (* always split or-patterns *)
-
 (* "half typed" cases are produced in [type_cases] when we've just typechecked
    the pattern but haven't type-checked the body yet.
    At this point we might have added some type equalities to the environment,
@@ -990,12 +968,132 @@ let rec has_literal_pattern p = match p.ppat_desc with
   | Ppat_or (p, q) ->
      has_literal_pattern p || has_literal_pattern q
 
-exception Need_backtrack
-
 let check_scope_escape loc env level ty =
   try Ctype.check_scope_escape env level ty
   with Unify trace ->
     raise(Error(loc, env, Pattern_type_clash(trace, None)))
+
+type pattern_checking_mode =
+  | Normal
+  (** We are checking user code. *)
+
+  | Counter_example of counter_example_checking_info
+  (** We are checking a counter-example to exhaustivity
+      generated by the pattern-matching analyser. *)
+
+
+(** In [Counter_example] mode the responsibility of [type_pat] is to
+   check that a counter-example to exhaustivity is valid: it has to be
+   type-correct in a slightly different sense than for user-code, see
+   [splitting_mode] below, and also capture at least one concrete
+   value.
+
+   [counter_example_checking_info] contains various parameters for
+   this mode of operation. *)
+and counter_example_checking_info = {
+    explode: explosion_fuel;
+    splitting_mode: splitting_mode;
+    synthetic_names: counter_example_synthetic_names;
+  }
+
+
+(** For a pattern to be a valid counter-example, it must be
+   inhabited -- match at least one value. A pattern may fail to match
+   a value if some of its wildcard are at a type that is empty
+   (typically due to incompatible GADT equations, although we also
+   support empty sum types).
+
+   The type-checker tries to figure out if a wildcard is in fact empty
+   by "exploding" it, doing a case-analysis on possible
+   constructors. It only tries up to a fixed depth bound, to avoid
+   non-termination (this is a generic proof-search problem) or
+   compilation-time slowdowns.
+
+   [explosion_fuel] is this depth limit on wildcard explosion. *)
+and explosion_fuel = int
+
+
+(** A counter-example pattern may not be well-typed because the
+   generator does not know about GADTs. In particular, it may generate
+   (even in depth) disjunctions of the form
+
+         (p1 | p2 | ... | pn),
+
+   where some of the pi may in fact be ill-typed. If at least one of
+   them is well-typed, we do have a valid counter-example. So we want
+   the type-checker to succeed if at least one of the alternatives is
+   well-typed.
+
+   Note that the choice of value in such an or-pattern can influence
+   the validity of other parts of the counter-example: if the
+   alternatives are GADT constructors, each one may add equations that
+   restrict other part of the counter-example in its own way. As
+   a consequence, evaluating each choice may require arbitrary
+   search/filtering in other parts of the counter-example (in
+   implementation terms, the continuation [k] is called on each
+   alternative).
+
+   Searching after each alternative in this way may be very costly. It
+   is only useful when GADTs are involved inside the or-pattern; if no
+   GADT constructors occur (possibly deep) inside an alternative, it
+   does no restrict the rest of the search space, so we can go with
+   this alternative and never try the others. But we don't know
+   whether a GADT constructor will occur (we haven't checked the
+   pattern yet!).
+
+   A possible implementation is to optimistically assume that
+   splitting will not be necessary, and split only if we hit a GADT
+   under an or-pattern. This strategy is faster when GADTs are rare.
+
+   The [splitting_mode] setting determines the splitting policy.  *)
+and splitting_mode =
+  | Pessimistic
+  (** Always split or-patterns
+
+     We use this mode when generating exhaustivity counter-examples
+     to check a refutation clause (p -> .), which typically involves
+     GADTs. *)
+  | Optimistic of { inside_nonsplit_or: bool; }
+  (** Split or-patterns on-demand.
+
+     In this mode we optimistically assume that splitting will not be
+     necessary; we first type-check alternatives under an or-pattern
+     without splitting. If we then hit a GADT constructor, we jump back
+     to the or-pattern and fallback to the splitting implementation.
+
+     We use this mode when checking exhaustivity of pattern matching;
+     typical OCaml code uses few GADT constructors on average. *)
+
+
+(** The exhaustivity checker produces counter-examples that contain
+   synthetic/fake variant constructors and record labels, as a hackish
+   way to encode a Typedtree.pattern back into a Parsetree.pattern
+   without losing information. The tables below are used to read back
+   the proper typed constructor/label from the synthetic parsetree-label. *)
+and counter_example_synthetic_names = {
+    constrs: (string, Types.constructor_description) Hashtbl.t;
+    labels: (string, Types.label_description) Hashtbl.t;
+  }
+
+(** This exception is only used internally within [type_pat_aux], to jump
+   back to the outermost non-split or -- in the [Optimistic] strategy. *)
+exception Need_backtrack
+
+(** Remember current typing state for backtracking.
+   No variable information, as we only backtrack on
+   patterns without variables (cf. assert statements). *)
+type state =
+ { snapshot: Btype.snapshot;
+   levels: Ctype.levels;
+   env: Env.t; }
+let save_state env =
+  { snapshot = Btype.snapshot ();
+    levels = Ctype.save_levels ();
+    env = !env; }
+let set_state s env =
+  Btype.backtrack s.snapshot;
+  Ctype.set_levels s.levels;
+  env := s.env
 
 (** Find the first alternative in the tree of or-patterns for which
    [f] does not raise an error. If all fail, the last error is
@@ -1007,35 +1105,46 @@ let rec find_valid_alternative f pat =
        with Error _ -> find_valid_alternative f p2)
   | _ -> f pat
 
-(* type_pat propagates the expected type as well as maps for
-   constructors and labels.
-   Unification may update the typing environment. *)
-(* constrs <> None => called from parmatch: backtrack on or-patterns
-   explode > 0 => explode Ppat_any for gadts *)
-(* Need_backtrack exceptions are raised in the [Inside_or] mode to backtrack
-   to the outermost or-pattern *)
-let rec type_pat ?(exception_allowed=false) ~constrs ~labels ~no_existentials
-          ~mode ~explode ~env sp expected_ty k =
+let no_explosion = function
+  | Normal -> Normal
+  | Counter_example info ->
+     Counter_example { info with explode = 0 }
+
+let get_splitting_mode = function
+  | Normal -> None
+  | Counter_example {splitting_mode} -> Some splitting_mode
+
+let change_splitting_mode mode f = match mode with
+  | Normal -> Normal
+  | Counter_example info ->
+     Counter_example { info with splitting_mode = f info.splitting_mode }
+
+let rec type_pat ?(exception_allowed=false) ~no_existentials ~mode
+    ~env sp expected_ty k =
   Builtin_attributes.warning_scope sp.ppat_attributes
     (fun () ->
-       type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
-         ~explode ~env sp expected_ty k
+       type_pat_aux ~exception_allowed ~no_existentials ~mode
+         ~env sp expected_ty k
     )
 
-and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
-      ~explode ~env sp expected_ty k =
-  let type_pat ?(exception_allowed=false) ?(constrs=constrs) ?(labels=labels)
-        ?(mode=mode) ?(explode=explode) ?(env=env) =
-    type_pat ~exception_allowed ~constrs ~labels ~no_existentials ~mode ~explode
-      ~env
+and type_pat_aux ~exception_allowed ~no_existentials ~mode
+      ~env sp expected_ty k =
+  let type_pat ?(exception_allowed=false) ?(mode=mode) ?(env=env) =
+    type_pat ~exception_allowed ~no_existentials ~mode ~env
   in
   let loc = sp.ppat_loc in
   let rup k x =
-    if constrs = None then (ignore (rp x));
+    if mode = Normal then (ignore (rp x));
     unify_pat !env x (instance expected_ty);
     k x
   in
-  let rp k x : pattern = if constrs = None then k (rp x) else k x in
+  let rp k x : pattern = if mode = Normal then k (rp x) else k x in
+  let construction_not_used_in_counterexamples = (mode = Normal) in
+  let must_backtrack_on_gadt = match get_splitting_mode mode with
+    | None -> false
+    | Some Pessimistic -> false
+    | Some (Optimistic {inside_nonsplit_or}) -> inside_nonsplit_or
+  in
   match sp.ppat_desc with
     Ppat_any ->
       let k' d = rp k {
@@ -1045,22 +1154,28 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         pat_attributes = sp.ppat_attributes;
         pat_env = !env }
       in
-      if explode > 0 then
-        let (sp, constrs, labels) =
-          try
-            Parmatch.ppat_of_type !env expected_ty
-          with Parmatch.Empty -> raise (Error (loc, !env, Empty_pattern))
-        in
-        if sp.ppat_desc = Parsetree.Ppat_any then k' Tpat_any else
-        if mode = Inside_or then raise Need_backtrack else
-        let explode =
-          match sp.ppat_desc with
-            Parsetree.Ppat_or _ -> explode - 5
-          | _ -> explode - 1
-        in
-        type_pat ~constrs:(Some constrs) ~labels:(Some labels)
-          ~explode sp expected_ty k
-      else k' Tpat_any
+      begin match mode with
+      | Normal -> k' Tpat_any
+      | Counter_example {explode; _} when explode <= 0 -> k' Tpat_any
+      | Counter_example ({explode; _} as info) ->
+         begin match Parmatch.ppat_of_type !env expected_ty with
+         | exception Parmatch.Empty -> raise (Error (loc, !env, Empty_pattern))
+         | (sp, constrs, labels) ->
+            if sp.ppat_desc = Parsetree.Ppat_any then k' Tpat_any else
+            if must_backtrack_on_gadt then raise Need_backtrack else
+            let explode =
+              match sp.ppat_desc with
+                Parsetree.Ppat_or _ -> explode - 5
+              | _ -> explode - 1
+            in
+            let mode =
+              Counter_example { info with
+                  explode;
+                  synthetic_names = { constrs; labels };
+                } in
+            type_pat ~mode sp expected_ty k
+         end
+      end
   | Ppat_var name ->
       let ty = instance expected_ty in
       let id = (* PR#7330 *)
@@ -1076,7 +1191,7 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         pat_attributes = sp.ppat_attributes;
         pat_env = !env }
   | Ppat_unpack name ->
-      assert (constrs = None);
+      assert construction_not_used_in_counterexamples;
       let t = instance expected_ty in
       begin match name.txt with
       | None ->
@@ -1102,7 +1217,7 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
       {ppat_desc=Ppat_var name; ppat_loc=lloc; ppat_attributes = attrs},
       ({ptyp_desc=Ptyp_poly _} as sty)) ->
       (* explicitly polymorphic type *)
-      assert (constrs = None);
+      assert construction_not_used_in_counterexamples;
       let cty, force = Typetexp.transl_simple_type_delayed !env sty in
       let ty = cty.ctyp_type in
       unify_pat_types lloc !env ty (instance expected_ty);
@@ -1125,7 +1240,7 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
       | _ -> assert false
       end
   | Ppat_alias(sq, name) ->
-      assert (constrs = None);
+      assert construction_not_used_in_counterexamples;
       type_pat sq expected_ty (fun q ->
         begin_def ();
         let ty_var = build_as_type !env q in
@@ -1160,7 +1275,7 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
       in
       let p = if c1 <= c2 then loop c1 c2 else loop c2 c1 in
       let p = {p with ppat_loc=loc} in
-      type_pat ~explode:0 p expected_ty k
+      type_pat ~mode:(no_explosion mode) p expected_ty k
         (* TODO: record 'extra' to remember about interval *)
   | Ppat_interval _ ->
       raise (Error (loc, !env, Invalid_interval))
@@ -1188,9 +1303,16 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         with Not_found -> None
       in
       let constr =
-        match lid.txt, constrs with
-          Longident.Lident s, Some constrs ->
-            assert (Hashtbl.mem constrs s); Hashtbl.find constrs s
+        let synthetic_constrs = match mode with
+          | Normal -> None
+          | Counter_example {synthetic_names = {constrs; _}; _} ->
+             Some constrs
+        in
+        match lid.txt, synthetic_constrs with
+        | Longident.Lident s, Some constrs ->
+           (* assert: cf. {!counter_example_checking_info} documentation *)
+            assert (Hashtbl.mem constrs s);
+            Hashtbl.find constrs s
         | _ ->
         let candidates =
           Env.lookup_all_constructors Env.Pattern ~loc:lid.loc lid.txt !env in
@@ -1198,8 +1320,8 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
           (mk_expected expected_ty)
           (Constructor.disambiguate Env.Pattern lid !env opath) candidates
       in
-      if constr.cstr_generalized && constrs <> None && mode = Inside_or
-      then raise Need_backtrack;
+      if constr.cstr_generalized && must_backtrack_on_gadt then
+        raise Need_backtrack;
       begin match no_existentials, constr.cstr_existentials with
       | None, _ | _, [] -> ()
       | Some r, (_ :: _ as exs)  ->
@@ -1285,7 +1407,8 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
       generalize_structure expected_ty;
       (* PR#7404: allow some_private_tag blindly, as it would not unify with
          the abstract row variable *)
-      if l = Parmatch.some_private_tag then assert (constrs <> None)
+      if l = Parmatch.some_private_tag
+      then assert (match mode with Normal -> false | Counter_example _ -> true)
       else unify_pat_types loc !env (newgenty (Tvariant row)) expected_ty;
       let k arg =
         rp k {
@@ -1336,15 +1459,17 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         pat_attributes = sp.ppat_attributes;
         pat_env = !env }
       in
-      if constrs = None then
+      begin match mode with
+      | Normal ->
         k (wrap_disambiguate "This record pattern is expected to have"
              (mk_expected expected_ty)
-             (type_label_a_list ?labels loc false !env type_label_pat opath
+             (type_label_a_list loc false !env type_label_pat opath
                 lid_sp_list)
              (k' (fun x -> x)))
-      else
-        type_label_a_list ?labels loc false !env type_label_pat opath
+      | Counter_example {synthetic_names = {labels; _}; _} ->
+        type_label_a_list ~labels loc false !env type_label_pat opath
           lid_sp_list (k' k)
+      end
   | Ppat_array spl ->
       let ty_elt = newgenvar() in
       begin_def ();
@@ -1361,12 +1486,16 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         pat_attributes = sp.ppat_attributes;
         pat_env = !env })
   | Ppat_or(sp1, sp2) ->
+      let may_split, must_split = match get_splitting_mode mode with
+        | None -> false, false
+        | Some Pessimistic -> true, true
+        | Some (Optimistic _) -> true, false in
       let state = save_state env in
       let split_or sp =
-        assert (constrs <> None);
+        assert may_split;
         let typ pat = type_pat ~exception_allowed pat expected_ty k in
         find_valid_alternative (fun pat -> set_state state env; typ pat) sp in
-      if mode = Split_or then split_or sp else begin
+      if must_split then split_or sp else begin
         let initial_pattern_variables = !pattern_variables in
         let initial_module_variables = !module_variables in
         let equation_level = !gadt_equations_level in
@@ -1376,9 +1505,14 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         let lev = get_current_level () in
         gadt_equations_level := Some lev;
         let env1 = ref !env in
+        let inside_or =
+          change_splitting_mode mode (function
+              | Pessimistic -> Pessimistic
+              | Optimistic _ -> Optimistic {inside_nonsplit_or = true})
+        in
         let p1 =
-          try Some (type_pat ~exception_allowed ~mode:Inside_or sp1 expected_ty
-                      ~env:env1 (fun x -> x))
+          try Some (type_pat ~exception_allowed ~mode:inside_or
+                      sp1 expected_ty ~env:env1 (fun x -> x))
           with Need_backtrack -> None in
         let p1_variables = !pattern_variables in
         let p1_module_variables = !module_variables in
@@ -1386,8 +1520,8 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         module_variables := initial_module_variables;
         let env2 = ref !env in
         let p2 =
-          try Some (type_pat ~exception_allowed ~mode:Inside_or sp2 expected_ty
-                      ~env:env2 (fun x -> x))
+          try Some (type_pat ~exception_allowed ~mode:inside_or
+                      sp2 expected_ty ~env:env2 (fun x -> x))
           with Need_backtrack -> None in
         end_def ();
         gadt_equations_level := equation_level;
@@ -1402,7 +1536,12 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
         ) p2_variables;
         begin match p1, p2 with
         | None, None ->
-            if mode = Inside_or then raise Need_backtrack else split_or sp
+           let inside_nonsplit_or = match get_splitting_mode mode with
+             | None | Some Pessimistic -> false
+             | Some (Optimistic {inside_nonsplit_or}) -> inside_nonsplit_or in
+           if inside_nonsplit_or
+           then raise Need_backtrack
+           else split_or sp
         | Some p, None | None, Some p -> rp k p (* no variables in this case *)
         | Some p1, Some p2 ->
         let alpha_env =
@@ -1421,7 +1560,7 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
       let nv = newgenvar () in
       unify_pat_types loc !env (Predef.type_lazy_t nv) expected_ty;
       (* do not explode under lazy: PR#7421 *)
-      type_pat ~explode:0 sp1 nv (fun p1 ->
+      type_pat ~mode:(no_explosion mode) sp1 nv (fun p1 ->
         rp k {
         pat_desc = Tpat_lazy p1;
         pat_loc = loc; pat_extra=[];
@@ -1485,12 +1624,12 @@ and type_pat_aux ~exception_allowed ~constrs ~labels ~no_existentials ~mode
   | Ppat_extension ext ->
       raise (Error_forward (Builtin_attributes.error_of_extension ext))
 
-let type_pat ?exception_allowed ?no_existentials ?constrs ?labels ?(mode=Normal)
-    ?(explode=0) ?(lev=get_current_level()) env sp expected_ty =
+let type_pat ?exception_allowed ?no_existentials ?(mode=Normal)
+    ?(lev=get_current_level()) env sp expected_ty =
   Misc.protect_refs [Misc.R (gadt_equations_level, Some lev)] (fun () ->
       let r =
-        type_pat ?exception_allowed ~no_existentials ~constrs ~labels ~mode
-          ~explode ~env sp expected_ty (fun x -> x)
+        type_pat ?exception_allowed ~no_existentials ~mode
+          ~env sp expected_ty (fun x -> x)
       in
       iter_pattern (fun p -> p.pat_env <- !env) r;
       r
@@ -1498,15 +1637,20 @@ let type_pat ?exception_allowed ?no_existentials ?constrs ?labels ?(mode=Normal)
 
 (* this function is passed to Partial.parmatch
    to type check gadt nonexhaustiveness *)
-let partial_pred ~lev ?mode ?explode env expected_ty constrs labels p =
+let partial_pred ~lev ~splitting_mode ?(explode=0)
+      env expected_ty constrs labels p =
   let env = ref env in
   let state = save_state env in
+  let mode =
+    Counter_example {
+        splitting_mode;
+        explode;
+        synthetic_names = {constrs; labels};
+      } in
   try
     reset_pattern None true;
     let typed_p =
-      Ctype.with_passive_variants
-        (type_pat ~lev ~constrs ~labels ?mode ?explode env p)
-        expected_ty
+      Ctype.with_passive_variants (type_pat ~lev ~mode env p) expected_ty
     in
     set_state state env;
     (* types are invalidated but we don't need them here *)
@@ -1517,14 +1661,15 @@ let partial_pred ~lev ?mode ?explode env expected_ty constrs labels p =
 
 let check_partial ?(lev=get_current_level ()) env expected_ty loc cases =
   let explode = match cases with [_] -> 5 | _ -> 0 in
+  let splitting_mode = Optimistic {inside_nonsplit_or = false} in
   Parmatch.check_partial
-    (partial_pred ~lev ~explode env expected_ty) loc cases
+    (partial_pred ~lev ~splitting_mode ~explode env expected_ty) loc cases
 
 let check_unused ?(lev=get_current_level ()) env expected_ty cases =
   Parmatch.check_unused
     (fun refute constrs labels spat ->
       match
-        partial_pred ~lev ~mode:Split_or ~explode:5
+        partial_pred ~lev ~splitting_mode:Pessimistic ~explode:5
           env expected_ty constrs labels spat
       with
         Some pat when refute ->
